--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - "3.6"
 cache: pip
 
+virtualenv:
+  system_site_packages: true
+
 install:
-  - virtualenv env
-  - source env/bin/activate
   - pip install -r requirements.txt
 
 script:
