--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "3.6"
 cache: pip
 
-virtualenv:
-  system_site_packages: true
-
 install:
+  - virtualenv env
+  - ls
+  - ls env
+  - ls env/bin
+  - source env/bin/activate
   - pip install -r requirements.txt
 
 script:
