--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ python:
 cache: pip
 
 install:
+  - echo "-----------------> install"
   - pip install -r requirements.txt
   - python -m pytest
   - ls -l
   - cd ~
+  - ls -l
+  - cd virtualenv
   - ls -l
 
 
@@ -16,7 +19,7 @@ jobs:
     - stage: deploy
       if: branch = master
       script:
-        - echo "-----------------> job"
+        - echo "-----------------> job script"
         - ls
         - cp -rf src dist
         - cp -rf ~/virtualenv/lib/python3.6/site-packages/* dist
