--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ deploy:
   function_name: "$AWSFUNCTIONNAME"
   region: "$AWSREGION"
   role: "arn:aws:iam::$AWSACCOUNTID:role/lambda_basic_execution"
+  handler_name: "handler"
   zip_file: "fileb://dist/hello_serverless.zip"
 
 
